tests/ui/switch_not_exhaustive.stderr
Error [E0307]: `switch` doesn't cover every case — missing: Green
  --> tests/ui/switch_not_exhaustive.lex:8:5
    |
  8 |     switch x {
    |     ^^^^^^
 Why: when every arm is a pattern test, each variant must appear once
 Fix: add an arm for: Green
