tests/ui/switch_not_exhaustive.jet
enum Light {
    Red;
    Green;
}

fn main() {
    val x = Light.Red;
    switch x {
        x == Red -> { print("r"); };
    }
}
